[package]
name = "bitlab"
version = "0.8.1"
authors = ["Kağan Kayal"]
description = "Extracting a range of bits from a binary data source"
documentation = "https://docs.rs/bitlab/"
homepage = "https://github.com/kkayal/bitlab"
repository = "https://github.com/kkayal/bitlab"
readme = "README.md"
keywords = ["bit", "extract", "binary"]
categories = ["data-structures"]
license = "MIT"

[badges]
travis-ci = { repository = "kkayal/bitlab", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
num = "0.1"