[package]
name = "bitlab"
version = "1.0.0"
authors = ["Kağan Kayal"]
description = "Extracting a range of bits from a binary data source"
documentation = "https://docs.rs/bitlab/"
homepage = "https://github.com/kkayal/bitlab"
repository = "https://github.com/kkayal/bitlab"
readme = "README.md"
keywords = ["bit", "extract", "binary"]
categories = ["data-structures"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "kkayal/bitlab", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
num = "0.3.0"

[features]
no_std = [] # feature has no explicit dependencies
